# mobile-devtools

./: .gitignore  CI_FAILURE_DIAGNOSIS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  devbox.json  treefmt.toml
.github/workflows/: README.md  devbox-update.yml  e2e-android.yml  e2e-full.yml  e2e-ios.yml  e2e-react-native.yml  pr-checks.yml  publish-mcp.yml  release.yml
ai/: README.md
examples/android/: .gitignore  README.md  devbox.json
examples/ios/: README.md  devbox.json
examples/react-native/: README.md  devbox.json
examples/repro/: README.md
plugins/android/: README.md  REFERENCE.md  plugin.json
plugins/devbox-mcp/: .releaserc.json  README.md  package.json
plugins/ios/: README.md  REFERENCE.md  plugin.json
plugins/react-native/: README.md  REFERENCE.md  SMART-PLATFORM-DETECTION.md  plugin.json
plugins/tests/: README.md  test-framework.sh
scripts/: bump-template.md  bump.sh
scripts/dev/: migration-report.sh  rewrite-plugin-urls.sh  sync-examples.sh
segkit/: Cargo.toml  flake.nix  install.sh  migration-status.json
segkit/src/: ci.rs  config_cmd.rs  delegate.rs  doctor.rs  init_cmd.rs  main.rs  setup.rs  state.rs  uninstall.rs  update.rs
segkit/src/commands/: init.rs  mod.rs  repro.rs
segkit/src/sdks/: mod.rs  registry.rs
segkit/src/util/: brew.rs  fs.rs  log.rs  mod.rs  platform.rs  project.rs  xcconfig.rs
segkit/src/utils/: cli.rs  git.rs  mod.rs
segkit/tests/: cli.rs
segment-init/: Cargo.toml  DESIGN.md  Makefile  README.md
segment-init/notes/: IMPLEMENTATION_PLAN.md
segment-init/src/: error.rs  main.rs
segment-init/src/cli/: flags.rs  interactive.rs  mod.rs
segment-init/src/config/: devbox.rs  mod.rs  plugins.rs
segment-init/src/template/: mod.rs  types.rs
segment-init/src/transform/: android.rs  ios.rs  mod.rs  react_native.rs  rename.rs
segment-init/src/validation/: mod.rs
segment-init/tests/integration/: test_cli.rs
test-results/: devbox-mcp-logs
tests/: README.md  e2e.yaml  process-compose-e2e.yaml  process-compose-unit-tests.yaml  test-summary.sh  unit-tests.yaml
wiki/: README.md
wiki/guides/: android-guide.md  device-management.md  doctor-command.md  ios-guide.md  quick-start.md  react-native-guide.md  testing.md  troubleshooting.md
wiki/project/: ARCHITECTURE.md  CI-CD.md  RELEASE.md  (+4 more)
(+142 files in other folders)
