[package]
name = "segkit"
version = "0.1.0"
edition = "2024"
description = "CLI for Segment SDK project generation and bug reproduction workflows"
license = "MIT"
repository = "https://github.com/segment-integrations/mobile-devtools"

[[bin]]
name = "segkit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
