[package]
name = "segkit"
version = "0.1.0"
edition = "2024"
description = "Segment SDK developer toolkit"
license = "MIT"
repository = "https://github.com/segment-integrations/mobile-devtools"

[[bin]]
name = "segkit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
