[package]
name = "segkit"
version = "0.1.0"
edition = "2024"
description = "Segment SDK developer toolkit"
license = "MIT"
repository = "https://github.com/segment-integrations/mobile-devtools"

[[bin]]
name = "segkit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
which = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
