[package]
name = "segment-init"
version = "0.1.0"
edition = "2021"
authors = ["Segment <friends@segment.com>"]
description = "CLI tool for creating reproducible Segment mobile projects"
license = "MIT"
repository = "https://github.com/segment-integrations/mobile-devtools"
keywords = ["segment", "mobile", "cli", "devbox", "scaffold"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.5"
regex = "1.10"
toml = "0.8"
indicatif = "0.17"
colored = "2.1"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"

[[bin]]
name = "segment-init"
path = "src/main.rs"
